14 May 2009

* Major cleanup and restructuring of build infrastructure. Still separate files
  for GNU and BSD make, but they are now hugely simplified at the expense of
  adding a configure script which must be run before make. Now build and
  install with:

	$ ./configure && make && sudo make install

04 May 2009

* Use ACS line drawing characters for pane separator lines.

30 April 2009

* Support command sequences without a space before the semicolon, for example
  "neww; neww" now works as well as "neww ; neww". "neww;neww" is still an
  error.
* previous-layout command.
* Display the layout name in window lists.
* Merge resize-pane-up and resize-pane-down into resize-pane with -U and -D
  flags.

29 April 2009

* Get rid of compat/vis.* - only one function was used which is easily
  replaced,and less compat code == good.

27 April 2009

* Avoid using the prompt history when the server is locked, and prevent any
  input entered from being added to the client's prompt history.
* New command, confirm-before (alias confirm), which asks for confirmation
  before executing a command. Bound "&" and "x" by default to confirm-before
  "kill-window" and confirm-before "kill-pane", respectively.

23 April 2009

* Support NEL, yet another way of making newline. Fixes the output from some
  Gentoo packaging thing. Reported by someone on SF then logs that allowed a
  fix sent by tcunha.
* Use the xenl terminfo flag to detect early-wrap terminals like the FreeBSD
  console. Many thanks for a very informative email from Christian Weisgerber.

21 April 2009

* tmux 0.8 released.

17 April 2009

* Remove the right number of characters from the buffer when escape then
  a cursor key (or other key prefixed by \033) is pressed. Reported by
  Stuart Henderson.

03 April 2009

* rotate-window command. -U flag (default) for up, -D flag for down.

02 April 2009

* Change scroll/pane redraws to only redraw the single pane affected rather
  than the entire window.